--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@mui/material": "^6.1.7",
+    "@neondatabase/serverless": "^0.10.4",
     "@vercel/postgres": "^0.10.0",
     "framer-motion": "^11.11.17",
     "next": "15.0.3",
     "next-auth": "^4.24.10",
+    "next-video": "^1.4.0",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106",
     "zod": "^3.23.8"
