--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/cache": "^11.14.0",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@mui/material": "^6.1.7",
+    "@mui/material-nextjs": "^6.4.3",
     "@neondatabase/serverless": "^0.10.4",
     "@vercel/postgres": "^0.10.0",
     "framer-motion": "^11.11.17",
