--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@emotion/cache": "^11.14.0",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
+    "@mui/icons-material": "^6.4.7",
     "@mui/material": "^6.1.7",
     "@mui/material-nextjs": "^6.4.3",
     "@neondatabase/serverless": "^0.10.4",
